small fixes by the way start debug aws
