# internal/rest/responses/profile.go
@@ -18,6 +18,7 @@ func Profile(m models.Profile) resources.Profile {
 				Pseudonym:   m.Pseudonym,
 				Description: m.Description,
 				Official:    m.Official,
+				AvatarUrl:   m.AvatarURL,
 				UpdatedAt:   m.UpdatedAt,
 				CreatedAt:   m.CreatedAt,
 			},
